# sem2_lab4

./: CMakeLists.txt  README.md  build.sh
include/: ArrayQueue.hpp  ArraySequence.hpp  ArraySequenceMonad.hpp  Bit.hpp  BitSequence.hpp  Cardinal.hpp  CircularBufferQueue.hpp  DynamicArray.hpp  Either.hpp  ImmutableArraySequence.hpp  LazySequence.hpp  LinkedList.hpp  ListQueue.hpp  ListSequence.hpp  OnlineStatistics.hpp  Option.hpp  Queue.hpp  Sequence.hpp  SequenceLength.hpp  Stack.hpp  Stream.hpp
reports/: LR4_report.md
src/: Bit.cpp  benchmark.cpp  console_runner.cpp  lr4_benchmark.cpp  lr4_console.cpp  lr4_main.cpp  main.cpp  queue_benchmark.cpp
tests/: lr4_tests.cpp  queue_tests.cpp  tests.cpp
ui/: gtk_main.cpp  lr4_gtk_main.cpp
